# NyxDocs

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
nyxdocs/: __init__.py  __main__.py  cli.py  config.py  models.py  server.py
nyxdocs/collectors/: __init__.py  base.py  coingecko.py  github.py
nyxdocs/database/: __init__.py  models.py  session.py
nyxdocs/scrapers/: __init__.py  base.py  github_scraper.py  web_scraper.py
nyxdocs/services/: __init__.py  crypto_service.py
nyxdocs/tools/: __init__.py  crypto_tools.py  system_tools.py
nyxdocs/utils/: __init__.py  logging.py
tests/: __init__.py  test_basic.py
